--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
   <head>
     <title>Warsztaty</title>
+    <script src="app.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
